--- a/client/src/app/tasks/tasks.component.scss
+++ b/client/src/app/tasks/tasks.component.scss
@@ -2,4 +2,15 @@
     height: 45px;
     width: 600px;
     padding: 5px;
+    border: none;
+    border-bottom: solid;
+}
+
+ul{
+    list-style: none;
+}
+
+.inp-check{
+    height: 30px;
+    width: 30px;
 }
