--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
+<div class="header">
+<h1 class="text-center"><i class="fas fa-thumbtack"></i> Task Manager</h1>
+</div>
+
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <h1 class="text-center">TODO app wit MEAN stack</h1>
-    </div>
-  </div>
-  <app-tasks></app-tasks>
+    <app-tasks></app-tasks>
+</div>
+
+<div class="footer">
+  <p class="text-center"><i class="far fa-copyright"></i> Copyright 2020. Developed by Volodymyr Mikulin using MEAN stack</p>
 </div>
