--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,46 +1,65 @@
-<form class="form" (submit)="add(taskTitle.value); taskTitle.value=''">
-    <div class="form-group">
-        <input #taskTitle class="form-control" placeholder="Task Name" />
+<div class="contur">
+    <div class="center-block">
+        <form class="form" (submit)="add(taskTitle.value); taskTitle.value=''">
+            <div class="form-group">
+                <input #taskTitle class="form-control" placeholder="Task Name" />
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg btn-block"><i class="fas fa-edit"></i> Create Task</button>
+        </form>
     </div>
-    <input type="submit" value="Submit" class="btn btn-success btn-lg btn-block">
-</form>
-
-<div class="jumbotron">
-    <div *ngIf="isTasksNotExist()">No tasks yet!</div>
-    <div *ngIf="!isTasksNotExist()">
-        <input type="text" [(ngModel)]="searchValue">
-        <select name="filterValue" [(ngModel)]="filterValue">
-            <option [ngValue]="true">Checked</option>
-            <option [ngValue]="false">Not Checked</option>
-            <option [ngValue]="undefined">All</option>
-        </select>
-        <select name="sortValue" [(ngModel)]="sortValue">
-            <option value="desc">newest</option>
-            <option value="asc">latest</option>
-        </select>
-
-        <div *ngIf="isSearchHaveNotResults">No search results</div>
-        <ul *ngFor="let task of tasks | filter:'isChecked':filterValue | filter:'title':searchValue:isSearchHaveNotResults | sort:'dates':sortValue">
+</div>
+<hr>
+<div *ngIf="isTasksNotExist()">
+    <h2 class="text-center">No tasks yet!</h2>
+</div>
+<div *ngIf="!isTasksNotExist()">
+    <div class="contur">
+        <div class="functions">
+            <div class="functions__search">
+                <span><i class="fas fa-search"></i> Search: </span><input type="text" [(ngModel)]="searchValue">
+            </div>
+            <div class="functions__filter">
+                <span><i class="fas fa-filter"></i> Filter by: </span><select name="filterValue" [(ngModel)]="filterValue">
+                    <option [ngValue]="true">Checked</option>
+                    <option [ngValue]="false">Not Checked</option>
+                    <option [ngValue]="undefined">All</option>
+                </select>
+            </div>
+            <div class="functions__sort">
+                <span><i class="fas fa-sort"></i> Sort by: </span><select name="sortValue" [(ngModel)]="sortValue">
+                    <option value="desc">newest</option>
+                    <option value="asc">latest</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <span class="small">*click on task to update</span>
+    <div *ngIf="isSearchHaveNotResults">No search results!</div>
+    <div class="jumbotron">
+        <ul
+            *ngFor="let task of tasks | filter:'isChecked':filterValue | filter:'title':searchValue:isSearchHaveNotResults | sort:'dates':sortValue">
             <li class="text-left">
-                <input class="inp-check" [(ngModel)]="task.isChecked"  (change)="update(task)" type="checkbox">
+                <input class="inp-check" [(ngModel)]="task.isChecked" (change)="update(task)" type="checkbox">
             </li>
             <li class="text-center">
                 <a (click)="edit(task)">
                     <span *ngIf="task!==editTask">{{task.title}}</span>
-                    <input class="inp" *ngIf="task===editTask" [(ngModel)]="task.title" (blur)="update(task)" (keyup.enter)="update(task)">
+                    <input class="inp" *ngIf="task===editTask" [(ngModel)]="task.title" (blur)="update(task)"
+                        (keyup.enter)="update(task)">
                 </a>
             </li>
-            <li>
+            <p class="text-left">
                 <small>{{task.dates | date:'medium'}}</small>
-            </li>
+            </p>
             <li class="text-right">
-                <button class="btn btn-danger" (click)="delete(task)">Delete</button>
+                <button class="btn btn-danger" (click)="delete(task)"><i class="far fa-trash-alt"></i> Delete</button>
             </li>
             <hr>
         </ul>
-    </div>    
+    </div>
+    <div class="card card-body bg-light text-center">
+        <span class="small">*click on item to update</span>
+    </div>
 </div>
 
-<div class="card card-body bg-light text-center">
-    <span class="small">*click on item to update</span>
-</div>
