--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="header">
-<h1 class="text-center"><i class="fas fa-thumbtack"></i> Task Manager</h1>
+  <h1 class="text-center"><i class="fas fa-thumbtack"></i> Task Manager</h1>
 </div>
 
 <div class="container">
-    <app-tasks></app-tasks>
+  <app-tasks></app-tasks>
 </div>
 
 <div class="footer">
-  <p class="text-center"><i class="far fa-copyright"></i> Copyright 2020. Developed by Volodymyr Mikulin using MEAN stack</p>
+  <p class="text-center"><i class="far fa-copyright"></i> Copyright 2020. Developed by Volodymyr Mikulin using MEAN
+    stack</p>
 </div>
