--- a/src/app/tasks/tasks.component.scss
+++ b/src/app/tasks/tasks.component.scss
@@ -1,37 +1,34 @@
-.contur{
-    padding: 30px;
-    background-color: black;
-    color: white;
-    border-radius: 13px;
-}
-.center-block{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    margin: 10px auto;
-    max-width: 700px;
-
-}
-.inp{
-    height: 45px;
-    width: 600px;
-    padding: 5px;
-    border: none;
-    border-bottom: solid;
+.contur {
+  padding: 30px;
+  background-color: black;
+  color: white;
+  border-radius: 13px;
 }
 
-ul{
-    list-style: none;
+.center-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  margin: 10px auto;
+  max-width: 700px;
 }
 
-.inp-check{
-    height: 30px;
-    width: 30px;
+.inp-check {
+  height: 30px;
+  width: 30px;
 }
 
-.functions{
-    display: flex;
-    justify-content: space-around;
+.functions {
+  display: flex;
+  justify-content: space-around;
 
 }
 
+.task {
+  list-style: none;
+
+  &__item {
+    padding: 20px;
+    margin-top: 5px;
+  }
+}
