--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-body{
-    font-family: 'Righteous', cursive;
+
+body {
+  font-family: 'Righteous', cursive;
+}
+
+@media screen and (max-width: 768px) {
+  .functions {
+    flex-wrap: wrap;
+  }
 }
