--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,9 @@ body {
   .functions {
     flex-wrap: wrap;
   }
+  .task p {
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-weight: bold;
+  }
+
 }
