--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,8 @@ body {
   .functions {
     flex-wrap: wrap;
   }
-  .task p {
+  .body {
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-    font-weight: bold;
   }
 
 }
