--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
   .functions {
     flex-wrap: wrap;
   }
-  .body {
+  body {
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
   }
 
